--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     function checkPassword() {
       const password = document.getElementById("password").value;
-      if (password === "monmotdepasse") {
+      if (password === "rediadme") {
         window.location.href = "secret.html";
       } else {
         alert("Mot de passe incorrect !");
@@ -15,7 +15,7 @@
   </script>
 </head>
 <body>
-  <h2>Entrez le mot de passe</h2>
+  <h2>entre le mot de passe</h2>
   <input type="password" id="password">
   <button onclick="checkPassword()">Valider</button>
 </body>
