--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     function checkPassword() {
       const password = document.getElementById("password").value;
-      if (password === "rediadme") {
+      if (password === "004459") {
         window.location.href = "secret.html";
       } else {
         alert("Mot de passe incorrect !");
